--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body class="bg-gray-900 text-gray-100 flex flex-col items-center justify-center min-h-screen p-4">
-    <div class="text-center mb-6">
+    <!-- <div class="text-center mb-6">
         <h1 class="text-3xl sm:text-4xl font-bold mb-2">2D 宇宙舰队战争：宏大地图（武器系统更新）</h1>
         <p class="text-gray-400">新增：激光分为脉冲激光 & 持续激光；动能武器拆分为 连发能量弹 / 近防武器 / 线圈炮；导弹增加战斗部属性（纯动能 / 穿甲 / 高爆 / 核）。</p>
         <p class="text-gray-400 mt-2">双击舰船追踪，按 O 接管，WASD 控制，空格 射击。</p>
-    </div>
+    </div> -->
 
     <canvas id="beeCanvas"></canvas>
 
