移动端操作适配-3

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body class="bg-gray-900 text-gray-100 flex flex-col items-center justify-center min-h-screen p-4">
+<body class="bg-gray-900 text-gray-100 flex flex-col items-center justify-center min-h-screen">
     <canvas id="beeCanvas"></canvas>
     <!-- 主脚本（ES modules） -->
     <script type="module" src="./src/main.js"></script>
